主页数据加载

--- a/html/home.html
+++ b/html/home.html
@@ -1,135 +1,197 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-  <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>AUI快速完成布局</title>
-</head>
-<body>
+  <html lang="en">
+  <head>
+    <meta charset="utf-8">
 <script src="./common/head.js" data-title="home"></script>
   <!-- <div id="app">{{message}}</div> -->
   <link rel="stylesheet" type="text/css" href="../css/module/aui-slide.css" />
-  <div id="aui-slide">
-      <div class="aui-slide-wrap" >
-          <div class="aui-slide-node bg-dark">
-              <img src="../images/indexbg.png" />
-          </div>
-          <div class="aui-slide-node bg-dark">
-              <img src="../images/indexbg.png" />
-          </div>
-          <div class="aui-slide-node bg-dark">
-              <img src="../images/indexbg.png" />
-          </div>
-      </div>
-      <div class="aui-slide-page-wrap"><!--分页容器--></div>
-  </div>
+  <div id="app">
 
-  <section class="aui-grid aui-margin-b-15 themeTitle">
-      <div class="aui-row">
-          <div class="aui-col-xs-4">
-            <img src="./../images/indexbg.png" alt="">
-            <div class="img-tip">星级酒店</div>
-          </div>
-          <div class="aui-col-xs-4">
-              <img src="./../images/indexbg.png" alt="">
-              <div class="img-tip">星级酒店</div>
-          </div>
-          <div class="aui-col-xs-4">
-              <img src="./../images/indexbg.png" alt="">
-              <div class="img-tip">星级酒店</div>
-          </div>
-          <div class="aui-col-xs-4">
-              <img src="./../images/indexbg.png" alt="">
-              <div class="img-tip">星级酒店</div>
-          </div>
-          <div class="aui-col-xs-4">
-              <img src="./../images/indexbg.png" alt="">
-              <div class="img-tip">星级酒店</div>
-          </div>
-          <div class="aui-col-xs-4">
-              <img src="./../images/indexbg.png" alt="">
-              <div class="img-tip">星级酒店</div>
-          </div>
-      </div>
-  </section>
+    <div id="aui-slide">
+        <div class="aui-slide-wrap" >
+            <div class="aui-slide-node bg-dark" v-for="item in bgLists">
+                <img v-bind:src=" item.show_url "/>
+            </div>
+        </div>
+        <div class="aui-slide-page-wrap"><!--分页容器--></div>
+    </div>
+    <section class="aui-grid aui-margin-b-15 themeTitle">
+        <div class="aui-row">
+            <div class="aui-col-xs-4" v-for="item in types">
+              <img v-bind:src=" item.show_url " alt="">
+              <div class="img-tip">{{ item.ch_name }}</div>
+            </div>
+        </div>
+    </section>
+    <section class="aui-content-padded news">
+        <div class="aui-card-list">
+            <div class="aui-card-list-header">
+                <span class="colline"></span>
+                <span>新闻动态</span>
+            </div>
+            <div class="aui-card-list-content-padded newsHeader">
+                装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升
+            </div>
+            <div class="aui-card-list-content-padded newscontent">
+                由中国建筑材料流通协会发布的全国建材家居景气指数BHI9月份为
+                119.02，环比上升10.05%，同一...
+            </div>
+            <div class="aui-card-list-content-padded newstimer">
+                2018-06-30
+            </div>
+        </div>
+        <div class="aui-card-list">
+            <div class="aui-card-list-header">
+                <span class="colline"></span>
+                <span>新闻动态</span>
+            </div>
+            <div class="aui-card-list-content-padded newsHeader">
+                装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升
+            </div>
+            <div class="aui-card-list-content-padded newscontent">
+                由中国建筑材料流通协会发布的全国建材家居景气指数BHI9月份为
+                119.02，环比上升10.05%，同一...
+            </div>
+            <div class="aui-card-list-content-padded newstimer">
+                2018-06-30
+            </div>
+        </div>
+    </section>
+  
+  <div class="team">
+    <div class="teamnav">
+        <span class="colline"></span>
+        <span class="teamtitle">专业团队</span>
+    </div>
+    <section class="aui-grid aui-margin-b-15 teamphoto">
+        <div class="aui-row">
+            <div class="aui-col-xs-4">
+                <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
+                <div class="aui-grid-label"><span class=" menberdesc">唐茜</span> <span class="menberposition">运营总监</span> </div>
+            </div>
+            <div class="aui-col-xs-4">
+                <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
+                <div class="aui-grid-label"><span class=" menberdesc">唐茜</span> <span class="menberposition">运营总监</span> </div>
+            </div>
+            <div class="aui-col-xs-4">
+                <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
+                <div class="aui-grid-label"><span class=" menberdesc">唐茜</span> <span class="menberposition">运营总监</span> </div>
+            </div>
+        </div>
+    </section>
+  
+    <div class="teamphotolist">
+        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
+        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
+        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
+        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
+        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
+        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
+        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
+        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
+    </div>
+    <div class="more">
+      <a href="">更多</a>
+    </div>
 
-  <section class="aui-content-padded news">
-      <div class="aui-card-list">
-          <div class="aui-card-list-header">
-              <span class="colline"></span>
-              <span>新闻动态</span>
-          </div>
-          <div class="aui-card-list-content-padded newsHeader">
-              装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升
-          </div>
-          <div class="aui-card-list-content-padded newscontent">
-              由中国建筑材料流通协会发布的全国建材家居景气指数BHI9月份为
-              119.02，环比上升10.05%，同一...
-          </div>
-          <div class="aui-card-list-content-padded newstimer">
-              2018-06-30
-          </div>
-      </div>
-      <div class="aui-card-list">
-          <div class="aui-card-list-header">
-              <span class="colline"></span>
-              <span>新闻动态</span>
-          </div>
-          <div class="aui-card-list-content-padded newsHeader">
-              装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升
-          </div>
-          <div class="aui-card-list-content-padded newscontent">
-              由中国建筑材料流通协会发布的全国建材家居景气指数BHI9月份为
-              119.02，环比上升10.05%，同一...
-          </div>
-          <div class="aui-card-list-content-padded newstimer">
-              2018-06-30
-          </div>
-      </div>
-  </section>
-
-<div class="team">
-  <div class="teamnav">
-      <span class="colline"></span>
-      <span class="teamtitle">专业团队</span>
-  </div>
-  <section class="aui-grid aui-margin-b-15 teamphoto">
-      <div class="aui-row">
-          <div class="aui-col-xs-4">
-              <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
-              <div class="aui-grid-label"><span class=" menberdesc">唐茜</span> <span class="menberposition">运营总监</span> </div>
-          </div>
-          <div class="aui-col-xs-4">
-              <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
-              <div class="aui-grid-label"><span class=" menberdesc">唐茜</span> <span class="menberposition">运营总监</span> </div>
-          </div>
-          <div class="aui-col-xs-4">
-              <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
-              <div class="aui-grid-label"><span class=" menberdesc">唐茜</span> <span class="menberposition">运营总监</span> </div>
-          </div>
-      </div>
-  </section>
-
-  <div class="teamphotolist">
-      <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-      <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-      <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-      <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-      <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-      <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-      <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-      <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-  </div>
-  <div class="more">
-    <a href="">更多</a>
   </div>
 </div>
-
-
 <script type="text/javascript" src="../js/module/aui-slide.js"></script>
 <script src="./common/foot.js" data-title="home"></script>
-</body>
 
-</html>
+<script>
+  var app = new Vue({
+      el: '#app',
+      data: {
+          message : "xuxiao is boy",
+          sex: '',
+          bgLists: [],
+          types: []
+      },
+      ready: function() {
+        // console.log(111);
+      },
+       beforeCreate: function () {
+        let that = this;
+        new Promise((resolve, reject) => {
+        //加载轮播图片
+        $.ajax({
+                url: baseUrl + '/banner/getBannersByType/1',
+                dataType: 'json',
+                method: 'get',
+                success: function (res) {
+                    that.bgLists = res.result;
+                    resolve(1);
+                }
+            })
+        }).then(() => {
+        //加载类别
+            $.ajax({
+                url: baseUrl + '/floorDistribution/getFloorDistributionListByParentId?parentId=1',
+                dataType: 'json',
+                method: 'get',
+                success: function (res) {
+                    that.types = res.result;
+                }
+            })     
+        }).then( ()=> {
+        //加载新闻
+        $.ajax({
+                url: baseUrl + '/articlePush/getArticleList',
+                data:{
+                    article_type:1,
+                    pageNo:1,
+                    pageSize:2
+                },
+                dataType: 'json',
+                method: 'get',
+                success: function (res) {
+                    console.log(res);
+                }
+            }) 
+        })
+
+        },
+        created: function () {
+  
+
+        },
+        beforeMount: function () {
+            
+        },
+        mounted: function () {
+
+        },
+        beforeUpdate: function () {
+
+        },
+        updated: function () {
+            var slide = new auiSlide({
+                container:document.getElementById("aui-slide"),
+                        //"width":300,
+                        "height":140,
+                        "speed":300,
+                        "autoPlay": 3000, //自动播放
+                        "pageShow":true,
+                        "pageStyle":'dot',
+                        "loop":true,
+                        'dotPosition':'center',
+                        currentPage:currentFun
+                    })
+                    function currentFun(index) {
+                        console.log(index);
+                    }
+        },
+        beforeDestroy: function () {
+
+        },
+        destroyed: function () {
+
+        }
+    })
+
+
+</script>
+<script>
+
+</script>
