--- a/html/company.html
+++ b/html/company.html
@@ -1,24 +1,64 @@
 <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="utf-8">
-<script src="./common/head.js" data-title="company"></script>
-  <div class="title">企业简介</div>
-  <div class="titleList">
-    <span>企业简介</span>
-    <span>发展历程</span>
-    <span>服务理念</span>
-    <span>服务范畴</span>
-  </div>
-  <div class="companyBox">
-    <div class="Photo">
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <script src="./common/head.js" data-title="company"></script>
+  <div id="app">
+    <div class="title">企业简介</div>
+    <div class="titleList">
+      <span v-for="(item,index) in type" @click="changeTable(index)" :style="{color:colors[index]}">{{ item.name}}</span>
+    </div>
+    <!-- <div class="companyBox">
+      <div class="Photo">
         <img src="./../images/indexbg.png" alt="">
+      </div>
+    </div> -->
+    <div class="comtent" id="content">
+      {{ content }}
     </div>
   </div>
-  <div class="comtent">
-深圳市雅鸟室内装饰设计有限公司（雅鸟软装），曾用名摩西奥软装；本公司专业从事地产样板间、星级酒店、高端会所等空间软装陈设设计与执行。 
 
-主要制造手绘油画、国画、写真微喷画、装置艺术画、雕塑、艺术品；执行家具、窗帘、墙纸、油画、饰品、花艺、地毯、软硬包、雕塑、摆件等。
-  </div>
-
-<script src="./common/foot.js" data-title="company"></script>
+  <script src="./common/foot.js" data-title="company"></script>
+  <script>
+    let returnColor = (that) => {
+      let colors = [];
+      for (let i in that.types) {
+        colors.push('#4D4D4D');
+      }
+      that.colors = colors;
+    }
+    var app = new Vue({
+      el: '#app',
+      data: {
+        type: [],
+        content: '',
+        colors:[]
+      },
+      methods: {
+        changeTable(index) {
+          let that = this;
+          returnColor(that);
+          let content = document.getElementById('content');
+            content.innerHTML = that.type[index].description;
+          that.colors[index] = '#C31022';
+        }
+      },
+      beforeCreate: function () {
+        let that = this;
+        returnColor(that);
+        $.ajax({
+          url: baseUrl + '/speechAndOverview/getSpeechAndOverviewByTypeId?type=',
+          dataType: 'json',
+          method: 'get',
+          success: function (res) {
+            console.log(res);
+            that.type = res.result;
+            let content = document.getElementById('content');
+            content.innerHTML = that.type[0].description;
+            that.colors[0] = '#C31022';
+          }
+        })
+      }
+    })
+  </script>
