--- a/html/home.html
+++ b/html/home.html
@@ -1,197 +1,260 @@
 <!DOCTYPE html>
-  <html lang="en">
-  <head>
+<html lang="en">
+
+<head>
     <meta charset="utf-8">
-<script src="./common/head.js" data-title="home"></script>
-  <!-- <div id="app">{{message}}</div> -->
-  <link rel="stylesheet" type="text/css" href="../css/module/aui-slide.css" />
-  <div id="app">
+    <script src="./common/head.js" data-title="home"></script>
+    <!-- <div id="app">{{message}}</div> -->
+    <link rel="stylesheet" type="text/css" href="../css/module/aui-slide.css" />
+    <div id="app">
 
-    <div id="aui-slide">
-        <div class="aui-slide-wrap" >
-            <div class="aui-slide-node bg-dark" v-for="item in bgLists">
-                <img v-bind:src=" item.show_url "/>
+        <div id="aui-slide" >
+            <div class="aui-slide-wrap" >
+                <div class="aui-slide-node bg-dark" v-for="(item,index) in bgLists">
+                    <img class="bg" v-bind:src="item.show_url" @click="lunbo_to(index)"/>
+                </div>
+            </div>
+            <div class="aui-slide-page-wrap">
+                <!--分页容器-->
             </div>
         </div>
-        <div class="aui-slide-page-wrap"><!--分页容器--></div>
-    </div>
-    <section class="aui-grid aui-margin-b-15 themeTitle">
-        <div class="aui-row">
-            <div class="aui-col-xs-4" v-for="item in types">
-              <img v-bind:src=" item.show_url " alt="">
-              <div class="img-tip">{{ item.ch_name }}</div>
+        <section class="aui-grid aui-margin-b-15 themeTitle">
+            <div class="aui-row">
+                <div class="aui-col-xs-4" v-for="(item,index) in types" @click="to_case(index)">
+                    <img v-bind:src=" item.show_url " alt="">
+                    <div class="img-tip">{{ item.ch_name }}</div>
+                </div>
             </div>
-        </div>
-    </section>
-    <section class="aui-content-padded news">
-        <div class="aui-card-list">
-            <div class="aui-card-list-header">
+        </section>
+        <section class="aui-content-padded news" v-if="newsLists[0]">
+            <div class="aui-card-list">
+                <div class="aui-card-list-header" @click="to_news()">
+                    <span class="colline"></span>
+                    <span>新闻动态</span>
+                </div>
+
+            </div>
+            <div class="aui-card-list" v-for="(item,index) in newsLists" @click="to_newsList(index)">
+                <div class="aui-card-list-content-padded newsHeader">
+                    {{ item.title }}
+                </div>
+                <div class="aui-card-list-content-padded newscontent">
+                    {{ item.digest }}
+                </div>
+                <div class="aui-card-list-content-padded newstimer">
+                    {{ item.push_time }}
+                </div>
+            </div>
+        </section>
+
+        <div class="team" v-if="teamFrist[0]">
+            <div class="teamnav">
                 <span class="colline"></span>
-                <span>新闻动态</span>
+                <span class="teamtitle">专业团队</span>
             </div>
-            <div class="aui-card-list-content-padded newsHeader">
-                装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升
-            </div>
-            <div class="aui-card-list-content-padded newscontent">
-                由中国建筑材料流通协会发布的全国建材家居景气指数BHI9月份为
-                119.02，环比上升10.05%，同一...
-            </div>
-            <div class="aui-card-list-content-padded newstimer">
-                2018-06-30
-            </div>
-        </div>
-        <div class="aui-card-list">
-            <div class="aui-card-list-header">
-                <span class="colline"></span>
-                <span>新闻动态</span>
-            </div>
-            <div class="aui-card-list-content-padded newsHeader">
-                装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升装修旺季促销建材家居景气指数回升
-            </div>
-            <div class="aui-card-list-content-padded newscontent">
-                由中国建筑材料流通协会发布的全国建材家居景气指数BHI9月份为
-                119.02，环比上升10.05%，同一...
-            </div>
-            <div class="aui-card-list-content-padded newstimer">
-                2018-06-30
-            </div>
-        </div>
-    </section>
-  
-  <div class="team">
-    <div class="teamnav">
-        <span class="colline"></span>
-        <span class="teamtitle">专业团队</span>
-    </div>
-    <section class="aui-grid aui-margin-b-15 teamphoto">
-        <div class="aui-row">
-            <div class="aui-col-xs-4">
-                <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
-                <div class="aui-grid-label"><span class=" menberdesc">唐茜</span> <span class="menberposition">运营总监</span> </div>
-            </div>
-            <div class="aui-col-xs-4">
-                <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
-                <div class="aui-grid-label"><span class=" menberdesc">唐茜</span> <span class="menberposition">运营总监</span> </div>
-            </div>
-            <div class="aui-col-xs-4">
-                <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
-                <div class="aui-grid-label"><span class=" menberdesc">唐茜</span> <span class="menberposition">运营总监</span> </div>
-            </div>
-        </div>
-    </section>
-  
-    <div class="teamphotolist">
-        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-        <img src="./../images/designbg.png" class="teamphotolistInfo" alt="">
-    </div>
-    <div class="more">
-      <a href="">更多</a>
-    </div>
+            <section class="aui-grid aui-margin-b-15 teamphoto">
+                <div class="aui-row">
+                    <div class="aui-col-xs-4" v-for="(item,index) in teamFrist" @click="to_detail(index)">
+                        <img v-bind:src='item.show_url' class="teammenberPhoto" alt="">
+                        <div class="aui-grid-label describBox">
+                            <span class="menberdesc">{{ item.name }}</span>
+                            <span class="menberposition">{{ item.station_name }}</span>
+                        </div>
+                    </div>
+                    <!-- <div class="aui-col-xs-4">
+                        <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
+                        <div class="aui-grid-label">
+                            <span class=" menberdesc">唐茜</span>
+                            <span class="menberposition">运营总监</span>
+                        </div>
+                    </div>
+                    <div class="aui-col-xs-4">
+                        <img src="./../images/designbg.png" class="teammenberPhoto" alt="">
+                        <div class="aui-grid-label">
+                            <span class=" menberdesc">唐茜</span>
+                            <span class="menberposition">运营总监</span>
+                        </div>
+                    </div> -->
+                </div>
+            </section>
 
-  </div>
-</div>
-<script type="text/javascript" src="../js/module/aui-slide.js"></script>
-<script src="./common/foot.js" data-title="home"></script>
+            <div class="teamphotolist">
+                <img v-bind:src="item.show_url" class="teamphotolistInfo" v-for="(item,index) in teamSecond" @click="to_details(index)" alt="">
+            </div>
+            <div class="more">
+                <a href="./team.html">更多</a>
+            </div>
 
-<script>
-  var app = new Vue({
-      el: '#app',
-      data: {
-          message : "xuxiao is boy",
-          sex: '',
-          bgLists: [],
-          types: []
-      },
-      ready: function() {
-        // console.log(111);
-      },
-       beforeCreate: function () {
-        let that = this;
-        new Promise((resolve, reject) => {
-        //加载轮播图片
-        $.ajax({
-                url: baseUrl + '/banner/getBannersByType/1',
-                dataType: 'json',
-                method: 'get',
-                success: function (res) {
-                    that.bgLists = res.result;
-                    resolve(1);
-                }
-            })
-        }).then(() => {
-        //加载类别
-            $.ajax({
-                url: baseUrl + '/floorDistribution/getFloorDistributionListByParentId?parentId=1',
-                dataType: 'json',
-                method: 'get',
-                success: function (res) {
-                    that.types = res.result;
-                }
-            })     
-        }).then( ()=> {
-        //加载新闻
-        $.ajax({
-                url: baseUrl + '/articlePush/getArticleList',
-                data:{
-                    article_type:1,
-                    pageNo:1,
-                    pageSize:2
+        </div>
+    </div>
+    <script type="text/javascript" src="../js/module/aui-slide.js"></script>
+    <script src="./common/foot.js" data-title="home"></script>
+
+    <script>
+
+        var app = new Vue({
+            el: '#app',
+            data: {
+                bgLists: [],
+                types: [],
+                newsLists: [],
+                teamFrist: [],
+                teamSecond: [],
+            },
+            methods:{
+                lunbo_to(index) {
+                    window.location.href = this.bgLists[index].herf_url;
                 },
-                dataType: 'json',
-                method: 'get',
-                success: function (res) {
-                    console.log(res);
+                //转到详细案例
+                to_case(index) {
+                    window.location.href = './case.html?id='+ this.types[index].id;
+                },
+                //转到人员详情
+                to_detail(index) {
+                    window.location.href = './menberInfo.html?id='+this.teamFrist[index].id;
+                },
+                to_details(index) {
+                    //console.log(index);
+                    // console.log(this.teamFrist);
+                    // console.log(this.teamSecond[index].id);
+                    window.location.href = './menberInfo.html?id='+this.teamSecond[index].id;
+                },
+                //转到新闻
+                to_news() {
+                    window.location.href = './news.html';
+                },
+                //转到新闻详情
+                to_newsList(index) {
+                    let id = this.newsLists[index].id;
+                    window.location.href = './newsInfo.html?id='+id;
                 }
-            }) 
+            },
+            beforeCreate: function () {
+                let that = this;
+                new Promise((resolve, reject) => {
+                    //加载轮播图片
+                    $.ajax({
+                        url: baseUrl + '/banner/getBannersByType/1',
+                        dataType: 'json',
+                        method: 'get',
+                        success: function (res) {
+                            console.log(res);
+                            that.bgLists = res.result;
+                            resolve(1);
+                        }
+                    })
+                }).then(() => {
+                console.log(this.bgLists);
+                //构建轮播组件
+                var slide = new auiSlide({
+                    container: document.getElementById("aui-slide"),
+                    //"width":300,
+                    "height": 160,
+                    "speed": 300,
+                    "autoPlay": 3000, //自动播放
+                    "pageShow": true,
+                    "pageStyle": 'dot',
+                    "loop": true,
+                    'dotPosition': 'center',
+                    // currentPage:currentFun
+                })
+                    //加载类别
+                    $.ajax({
+                        url: baseUrl + '/floorDistribution/getFloorDistributionListByParentId?parentId=1',
+                        dataType: 'json',
+                        method: 'get',
+                        success: function (res) {
+                            console.log(res);
+                            that.types = res.result;
+                        }
+                    })
+                }).then(() => {
+                    //加载新闻
+                    $.ajax({
+                        url: baseUrl + '/articleType/getArticleTypeByParentId/1',
+                        dataType: 'json',
+                        method: 'get',
+                        success: function (res) {
+                            //console.log(res);
+                            let id;
+                            for (let i in res.result) {
+                                if (res.result[i].name == '企业新闻') {
+                                    id = res.result[i].id;
+                                }
+                            }
+                            $.ajax({
+                                url: baseUrl + '/articlePush/getArticleList',
+                                data: {
+                                    article_type: id,
+                                    pageNo: 1,
+                                    pageSize: 2
+                                },
+                                dataType: 'json',
+                                method: 'get',
+                                success: function (res) {
+                                    //console.log(res);
+                                    for (let i in res.result) {
+                                        res.result[i].push_time = timestampToTime(res.result[i].push_time);
+                                    }
+                                    that.newsLists = res.result;
+                                }
+                            })
+                        }
+                    })
+                }).then(() => {
+                    //加载团队
+                    $.ajax({
+                        url: baseUrl + '/staff/getStaffById',
+                        dataType: 'json',
+                        method: 'get',
+                        success: function (res) {
+                            //console.log(res);
+                            let teamFrist = [];
+                            let teamSecond = [];
+                            if(res.result.length > 3) {
+                                for (let i = 0 ; i < 3; i++) {
+                                    teamFrist.push(res.result[i]);
+                                }
+                                that.teamFrist = teamFrist;
+                                //console.log(that.teamFrist);
+                                for (let i = 3; i < res.result.length ;i ++) {
+                                    teamSecond.push(res.result[i]);
+                                }
+                                that.teamSecond = teamSecond;
+                                //console.log(that.teamSecond);
+                            } else {
+                                that.teamFrist = res.result;
+                                that.teamSecond = res.result;
+                            }
+                        }
+                    })
+                })
+            },
+            created: function () {
+
+            },
+            beforeMount: function () {
+
+            },
+            mounted: function () {
+
+            },
+            beforeUpdate: function () {
+
+            },
+            updated: function () {
+
+                // function currentFun(index) {
+                //     console.log(index);
+                // }
+            },
+            beforeDestroy: function () {
+
+            },
+            destroyed: function () {
+
+            }
         })
 
-        },
-        created: function () {
-  
 
-        },
-        beforeMount: function () {
-            
-        },
-        mounted: function () {
-
-        },
-        beforeUpdate: function () {
-
-        },
-        updated: function () {
-            var slide = new auiSlide({
-                container:document.getElementById("aui-slide"),
-                        //"width":300,
-                        "height":140,
-                        "speed":300,
-                        "autoPlay": 3000, //自动播放
-                        "pageShow":true,
-                        "pageStyle":'dot',
-                        "loop":true,
-                        'dotPosition':'center',
-                        currentPage:currentFun
-                    })
-                    function currentFun(index) {
-                        console.log(index);
-                    }
-        },
-        beforeDestroy: function () {
-
-        },
-        destroyed: function () {
-
-        }
-    })
-
-
-</script>
-<script>
-
-</script>
+    </script>
