--- a/html/newsInfo.html
+++ b/html/newsInfo.html
@@ -20,6 +20,8 @@
         header.innerHTML = '新闻详情';
   //获取url参数
   let id = getQueryString('id');
+  let index = getQueryString('index');
+  console.log(index);
   console.log(id);
   var app = new Vue({
     el: '#app',
@@ -49,7 +51,12 @@
         //返回上一层
           let to_back = document.getElementById('to_back');
           to_back.onclick = () => {
-            window.location.href = './news.html?id=' + that.product.articleType;
+            if (index && index == 0) {
+              window.location.href = './home.html';
+            } else {
+              window.location.href = './news.html?id=' + that.product.articleType;
+            }
+           
           }
       })
 
